--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "nodemon": "^3.0.2",
+    "router": "^1.3.8",
     "ws": "^8.16.0"
   }
 }
