--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     # - lib/icons/backbutton.png
     # - lib/icons/phonecall-button.png
     - lib/icons/
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
