--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   flutter_svg: ^2.0.9
+  firebase_core: ^2.25.3
+  firebase_auth: ^4.17.4
 
 dev_dependencies:
   flutter_test:
