--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^2.25.4
-  firebase_database: ^10.0.0
+  firebase_database: ^10.4.5
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,9 +39,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   flutter_svg: ^2.0.9
-  firebase_core: ^2.25.3
+  # firebase_core: ^2.25.3
   firebase_auth: ^4.17.4
-  firebase_database: ^10.4.5
+  # firebase_database: ^10.4.5
   google_fonts: ^6.1.0
   bloc: ^8.1.1
   flutter_bloc: ^8.1.3
