--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -47,6 +47,16 @@ dependencies:
   flutter_bloc: ^8.1.3
   intl: ^0.19.0
   http: ^1.2.0
+  flutter_launcher_icons: "^0.13.1"
+  flutter_native_splash: ^2.3.10
+
+flutter_icons:
+  android: true
+  image_path: "assets/main_mascot.png"
+
+flutter_native_splash:
+  image: assets/large_app_name.png
+  color: "#ffffff"
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +68,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.1
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -75,8 +86,6 @@ flutter:
   assets:
     # - lib/icons/backbutton.png
     # - lib/icons/phonecall-button.png
-    - assets/images/SmallAppName.png
-    - assets/images/av1.png
     - lib/icons/
     - assets/
   #   - images/a_dot_ham.jpeg
