--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -81,9 +81,9 @@ flutter:
   uses-material-design: true
   # To add assets to your pplication, add an assets section, like this:
   assets:
-    - lib/icons/
-    - assets/
+    - assets/icons/
     - assets/logos/
+    - assets/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
