--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -82,6 +82,12 @@ flutter:
   # To add assets to your pplication, add an assets section, like this:
   assets:
     - assets/
+
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf
+        - asset: fonts/Poppins-Bold.ttf
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
