--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -82,12 +82,15 @@ flutter:
   # To add assets to your pplication, add an assets section, like this:
   assets:
     - assets/
-
+    
   fonts:
-    - family: Poppins
+    - family: Mitr
       fonts:
-        - asset: fonts/Poppins-Regular.ttf
-        - asset: fonts/Poppins-Bold.ttf
+        - asset: fonts/Mitr-Bold.ttf
+        - asset: fonts/Mitr-SemiBold.ttf
+        - asset: fonts/Mitr-Regular.ttf
+        - asset: fonts/Mitr-Light.ttf
+  
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
