--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -32,8 +32,6 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.25.4
   firebase_database: ^10.4.5
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -49,6 +47,8 @@ dependencies:
   http: ^1.2.0
   flutter_launcher_icons: "^0.13.1"
   flutter_native_splash: ^2.3.10
+  table_calendar: ^3.1.0
+  flutter_localization: ^3.0.0
 
 flutter_icons:
   android: true
