--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -48,7 +48,6 @@ dependencies:
   flutter_launcher_icons: "^0.13.1"
   flutter_native_splash: ^2.3.10
   table_calendar: ^3.1.0
-  flutter_localization: ^3.0.0
 
 flutter_icons:
   android: true
@@ -81,7 +80,11 @@ flutter:
   uses-material-design: true
   # To add assets to your pplication, add an assets section, like this:
   assets:
-    - assets/
+    - assets/logos/
+    - assets/icons/
+    - assets/avatar/
+    - assets/images/
+
     
   fonts:
     - family: Athiti
