--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -65,6 +65,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.1
+  shared_preferences: ^2.0.5
 
 
 # For information on the generic Dart part of this file, see the
