create agreement psy / checkbox component / edit botton component

--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
     - assets/icons/
     - assets/avatar/
     - assets/images/
+    - assets/psy/
     - assets/emotion/emotion_text/
     - assets/emotion/emotion_calendar/
     - assets/loading_screen/
