--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_launcher_icons: "^0.13.1"
   flutter_native_splash: ^2.3.10
   table_calendar: ^3.1.0
+  google_sign_in: ^6.2.1
 
 
 flutter_icons:
