--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   table_calendar: ^3.1.0
   image_picker: ^1.0.7
   scroll_date_picker : "^3.8.0"
+  flutter_rating_bar: ^4.0.1
 
 
 
