--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
     "router": "^1.3.8",
     "ws": "^8.16.0"
