--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -53,8 +53,8 @@ dependencies:
   image_picker: ^1.0.7
   scroll_date_picker : "^3.8.0"
   flutter_rating_bar: ^4.0.1
-
-
+  loading_animation_widget: ^1.2.1
+  flutter_spinkit: ^5.2.1
 
 
 flutter_icons:
